# Lake_Lafayette_Land_Owners

./: .gitignore  Intro.md  README.md  push_github.sh
.github/workflows/: windows-release.yml
desktop_app/: .gitignore  README.md  pyproject.toml
desktop_app/docs/: architecture.md  deployment.md  migration-plan.md
desktop_app/packaging/: build_windows.ps1  installer.iss  pyinstaller.spec
desktop_app/release/: update_config.example.json
desktop_app/src/: app.py  main.py  runtime.py
desktop_app/src/db/: connection.py  repositories.py  schema.py
desktop_app/src/importers/: dbf_importer.py
desktop_app/src/services/: assessment_service.py  cards_stickers_service.py  dashboard_service.py  encumbrance_service.py  financial_service.py  help_service.py  import_service.py  logging_service.py  notice_service.py  owner_lot_service.py  payment_service.py  pdf_service.py  property_sale_service.py  report_service.py  update_service.py  utility_service.py
desktop_app/src/ui/: assessments.py  cards_stickers.py  dashboard.py  financials.py  import_setup.py  lien_collection.py  notices.py  owner_lot.py  payment_history.py  payments.py  property_sales.py  reports.py  utilities.py
print_samples/: README.md  print_inventory.csv
scripts/: README.md  release_tag.sh
