[project]
name = "lake-lot-desktop"
version = "0.1.11"
description = "Desktop replacement for the legacy dBase lot and financial system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["reportlab>=4.0"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
